--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "native-base": "^2.13.8",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/viewpager": "^3.3.0",
+    "@react-navigation/native": "^5.1.1",
+    "@react-navigation/stack": "^5.2.3",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongodb-stitch-react-native-sdk": "^4.8.0",
+    "mongodb-stitch-react-native-services-mongodb-remote": "^4.8.0",
+    "native-base": "^2.13.12",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-pages": "^0.9.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swiper": "^1.5.14",
+    "rn-viewpager": "^1.2.9",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
